<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMSB Helpdesk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_case">Add Case</string>
    <string name="title_activity_logout">Logout</string>

    <!-- Contact Info -->
    <string name="contact_info">Contact Information</string>
    <string name="action_taken">Action Taken</string>
    <string name="add_contact">Add New Contact</string>
    <string name="company">Company:</string>
    <string name="name">Name:</string>
    <string name="company_name">CMS</string>
    <string name="email">Email:</string>
    <string name="emailAdd">u@asdf.com</string>
    <string name="tel">Tel:</string>
    <string name="telNum">12345678</string>
    <string name="title_activity_add_new_user">Add New User</string>
    <string name="cms">CMS</string>
    <string name="cms_road">CMS Road</string>
    <string name="cms_works">CMS Works</string>
    <string name="close">Close</string>
    <string name="addUser">Add User</string>
    <string name="type">Choose Name:</string>
    <string name="type1">abel</string>
    <string name="type2">josh</string>
    <string name="type3">beth</string>
    <string name="type4">tom</string>

    <!-- IT DEPT REF -->
    <string name="it_dept_ref">IT Dept. Ref.</string>
    <string name="owner">Owner:</string>
    <string name="reqSource">Request Source:</string>
    <string name="assignee">Assignee:</string>
    <string name="status">Status:</string>
    <string name="att">Actual Time Taken:</string>
    <string name="ian">Ian</string>
    <string name="vero">Veronica</string>
    <string name="hp">Helpdesk Phone</string>
    <string name="he">Helpdesk Email</string>
    <string name="mp">Meet Person</string>
    <string name="iba">Informed by Assignee</string>
    <string name="abel">Abel</string>
    <string name="mat">Mathias</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>

    <!-- Case Particulars -->
    <string name="case_particulars">Case Particulars</string>
    <string name="severity">Severity:</string>
    <string name="tos">Type of Service:</string>
    <string name="category">Category:</string>
    <string name="sub_cat">Sub Category:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <!-- General -->
    <string name="title_activity_general">General</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="chngPass">Change Password</string>

    <!-- Users -->
    <string name="title_activity_users">Users</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="spinner_title">Choose Name:</string>
    <string name="back">Back</string>
    <string name="main">Main</string>
    <string name="username">Username</string>
    <string name="listUsersByCompany">List Users by Company:</string>
    <string name="id">ID:</string>
    <string name="numCloseCase">Number of closed cases to list on the main page:</string>
    <string name="password">Password:</string>
    <string name="user">Username:</string>
    <string name="desc">Description</string>
    <string name="login">Login</string>
    <string name="highlight">Highlight assigned cases as:</string>
    <string name="or">or</string>
    <string name="createAcc">Create Account!</string>
    <string name="showCaseOwner">Show case owner column for:</string>
    <string name="openCases">OPEN cases</string>
    <string name="closeCases">CLOSE cases</string>
    <string name="case_desc">Case Description</string>
    <string name="select_company">Select Company:</string>
    <string name="sync">Sync</string>
    <string name="title_activity_user_list">userList</string>
    <string name="title_activity_text_editor">TextEditor</string>
    <string name="done">Done</string>
    <string name="syncStatus">S</string>
    <string name="server">Server:</string>
    <string name="settings">Settings</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="account">Account Setup</string>
    <string name="title_activity_test">test</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="search_users">Search Users..</string>
    <string name="enter_server_address">Enter Server Address</string>
    <string name="enter_username">Enter Username</string>
    <string name="title_activity_add_picture">AddPicture</string>
    <string name="attachImage">Attach Image</string>

</resources>
