<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mycompany.CMSBHelpdesk.MainActivity">

    <!--<item android:id="@+id/log_out"
        android:title="@string/title_activity_logout"
        android:orderInCategory="101"
    app:showAsAction="never" />-->

    <item android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:orderInCategory="100"
    app:showAsAction="never" />

    <item android:id="@+id/add_case"
    android:title="@string/title_activity_add_case"
    android:orderInCategory="1"
    android:icon="@drawable/plus_white"
    app:showAsAction="ifRoom|withText|ifRoom"/>

    <item android:id="@+id/synchronise"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/sync"
        android:orderInCategory="3"
        app:showAsAction="never" />


</menu>
