<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="11dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000099"
            android:text="@string/name"
            android:id="@+id/usernameMain"
            android:padding="1dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:singleLine="true"
            android:textColor="#5a5a5a"
            android:text="@string/company"
            android:id="@+id/companyMain"
            android:padding="1dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:singleLine="true"
            android:textColor="#5a5a5a"
            android:text="@string/email"
            android:id="@+id/emailMain"
            android:padding="1dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:singleLine="true"
            android:textColor="#5a5a5a"
            android:text="@string/tel"
            android:id="@+id/telMain"
            android:padding="1dp"/>

</LinearLayout>