<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:layout_gravity="center_horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mycompany.CMSBHelpdesk.General"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/title_activity_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <!--Number of closed cases to list on main page:-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number of closed cases to list on the main page:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/severity"
            android:textSize="15sp"
            android:layout_margin="5dp"/>

        <!--Highlight assigned cases as-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Highlight assigned cases as:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/severity"
            android:textSize="15sp"
            android:layout_margin="5dp"/>

        <!--Show OPEN/CLOSE cases-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show case owner column for:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OPEN cases"
            android:id="@+id/open"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLOSE cases"
            android:id="@+id/close"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="30dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chngPass"
            android:textSize="15sp"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</ScrollView>