<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="15dp">
    <ScrollView
        android:id="@+id/contactInfo"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/IDCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="#cc0000"/>
            <TextView
                android:id="@+id/assigneeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:textColor="#777"/>
            <!--Name:-->
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/IDCase"
                android:text="@string/name"
                android:textSize="19sp"
                android:textColor="#333"
                android:layout_marginBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toEndOf="@+id/nameLabel"
                android:layout_below="@+id/IDCase"
                android:id="@+id/spinnerNames"
                android:hint="@string/spinner_title"
                android:textColorHint="#999999"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:textSize="18sp"
                android:background="#ddd"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="40dp"
                android:paddingTop="5dp"
                android:paddingStart="17dp"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                />
            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/IDCase"
                android:textColorHint="#999999"
                android:background="@drawable/info"
                android:id="@+id/moreInfo"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="13dp"
                android:padding="25dp"/>

            <TextView
                android:id="@+id/divider"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ddd"
                android:layout_below="@+id/spinnerNames"
                android:padding="10dp"/>

            <!--Status-->
            <TextView
                android:id="@+id/statusLabel"
                android:text="@string/status"
                android:layout_below="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="#333"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="7dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:layout_below="@+id/divider"
                android:layout_toEndOf="@+id/statusLabel"
                android:id ="@+id/spinnerStatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="13dp"
                android:spinnerMode="dialog"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/dropdown"
                android:layout_marginTop="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="0dp"
                android:layout_below="@+id/moreInfo"
                android:layout_alignEnd="@+id/moreInfo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ccc"
                android:layout_margin="15dp"
                android:layout_below="@+id/spinnerStatus"/>

            <!--Case Description-->
            <TextView
                android:id="@+id/caseDescLabel"
                android:layout_below="@+id/spinnerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_desc"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="#333"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ccc"
                android:layout_margin="15dp"
                android:layout_below="@+id/caseDescLabel"
                android:id="@+id/statusDivider"/>
            <TextView
                android:layout_below="@+id/statusDivider"
                android:id="@+id/caseDesc"
                android:gravity="top|start"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/case_desc"
                android:textColorHint="#444"
                android:lines="3"
                android:maxLength="1024"
                android:background="#edee"
                android:textColor="#aa00"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ddd"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/caseDesc"
                android:id="@+id/caseDivider"/>

            <!--Action Taken-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_taken"
                android:textSize="18sp"
                android:textColor="#333"
                android:id="@+id/actionTakenLabel"
                android:layout_below="@+id/caseDivider"/>

            <TextView
                android:layout_below="@+id/actionTakenLabel"
                android:id="@+id/actionTaken"
                android:gravity="top|start"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_taken"
                android:textColorHint="#444"
                android:lines="3"
                android:maxLength="1024"
                android:background="#edee"
                android:textColor="#aa00"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ddd"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/actionTaken"
                android:id="@+id/actionTakenDivider"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@+id/actionTakenDivider"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:layout_alignParentStart="true"
                android:id="@+id/bitmapImage" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/bitmapImage"
                android:layout_below="@+id/actionTakenDivider"
                android:id="@+id/abc">
                <!--<TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:id="@+id/filePath"/>-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:id="@+id/numberOfImgs"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


    <!--Submit Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:id ="@+id/submitBtn"
        android:padding="20dp"
        android:layout_margin="10dp"/>

</RelativeLayout>